force-app/main/default/objects/Opportunity/fields/Amount_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Amount_Acknowledgement__c</fullName>
    <description>What is the time the user accepted the amount to invest</description>
    <label>Amount Acknowledgement</label>
    <type>DateTime</type>
</CustomField>