force-app/main/default/objects/Opportunity/fields/Consent_To_Transferring_Data__c.field-meta.xml
<CustomField>
    <fullName>Consent_To_Transferring_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent To Transferring Data</label>
    <type>Checkbox</type>
</CustomField>