force-app/main/default/objects/Opportunity/fields/Investment_Status__c.field-meta.xml
<CustomField>
    <fullName>Investment_Status__c</fullName>
    <formula>IF( CASESAFEID(RecordTypeId) == $CustomMetadata.Constant__mdt.OpportuntiyInvestmentRecordTypeId.Value__c  , 
IF(ISPICKVAL( StageName , &quot;ACTIVE&quot;), &quot;ACTIVE&quot;,  
IF(ISPICKVAL( StageName , &quot;Closed Won&quot;), &quot;CLOSED_WON&quot;, 
IF(ISPICKVAL( StageName , &quot;Closed Lost&quot;), &quot;CLOSED_LOST&quot;,
 &quot;WAIT_FOR_START_DATE&quot;)))
,&quot;&quot;)</formula>
    <label>Investment Status</label>
    <type>Text</type>
</CustomField>