force-app/main/default/objects/Opportunity/fields/Is_Money_Transferred__c.field-meta.xml
<CustomField>
    <fullName>Is_Money_Transferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Money Transferred</label>
    <type>Checkbox</type>
</CustomField>