force-app/main/default/objects/Opportunity/fields/Money_Transfer_Confirmed_By__c.field-meta.xml
<CustomField>
    <fullName>Money_Transfer_Confirmed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Money Transfer Confirmed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>