force-app/main/default/objects/Opportunity/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <label>Reference Number</label>
    <length>120</length>
    <type>Text</type>
</CustomField>