force-app/main/default/objects/Opportunity/recordTypes/Investment_SMI.recordType-meta.xml
<RecordType>
    <fullName>Investment_SMI</fullName>
    <active>true</active>
    <businessProcess>Investment SMI</businessProcess>
    <label>Investment (SMI)</label>
</RecordType>