force-app/main/default/objects/Opportunity/recordTypes/Real_Estate_RE_Full_Sale.recordType-meta.xml
<RecordType>
    <fullName>Real_Estate_RE_Full_Sale</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Real Estate (RE) - Full Sale</label>
</RecordType>