force-app/main/default/objects/Opportunity/recordTypes/Real_Estate_RE_Other_Request.recordType-meta.xml
<RecordType>
    <fullName>Real_Estate_RE_Other_Request</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Real Estate (RE) - Other Request</label>
</RecordType>