force-app/main/default/objects/Opportunity/recordTypes/Real_Estate_RE_Term_Deposit.recordType-meta.xml
<RecordType>
    <fullName>Real_Estate_RE_Term_Deposit</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Real Estate (RE) - Term Deposit</label>
</RecordType>