force-app/main/default/objects/Opportunity/recordTypes/Real_Estate_RE_Valuation.recordType-meta.xml
<RecordType>
    <fullName>Real_Estate_RE_Valuation</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Real Estate (RE) - Valuation</label>
</RecordType>