force-app/main/default/objects/Opportunity/listViews/All_RE_opportunities.listView-meta.xml
<ListView>
    <fullName>All_RE_opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Test__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Real_Estate_RE_Full_Sale,Opportunity.Real_Estate_RE_Other_Request,Opportunity.Real_Estate_RE_Partial_Sale,Opportunity.Real_Estate_RE_Term_Deposit,Opportunity.Real_Estate_RE_Valuation</value>
    </filters>
    <label>All RE opportunities</label>
</ListView>